--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,11 @@
 
         <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
         <dependency>
-        <groupId>org.redisson</groupId>
-        <artifactId>redisson</artifactId>
-        <version>3.10.4</version>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.11.1</version>
         </dependency>
+
 
 
         <dependency>
