--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.1.8.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
@@ -53,6 +59,8 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.11.1</version>
         </dependency>
+
+
 
 
 
